[gd_scene load_steps=5 format=3 uid="uid://bddnesojb3xex"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_h2vby"]
[ext_resource type="Texture2D" uid="uid://blhmd5qdxkop7" path="res://icon.svg" id="2_yddrg"]
[ext_resource type="PackedScene" uid="uid://b6e5swb7oa78b" path="res://Scenes/dice_enemi.tscn" id="3_0tr2e"]
[ext_resource type="PackedScene" uid="uid://b5quk5jybqi1m" path="res://Scenes/dice_player.tscn" id="4_gmop2"]

[node name="Node2D" type="Node2D"]
scale = Vector2(0.355, 0.355)
script = ExtResource("1_h2vby")

[node name="Node2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Node2D"]

[node name="Button1" type="Button" parent="Node2D"]
offset_left = -1191.55
offset_top = 363.38
offset_right = -884.549
offset_bottom = 664.38

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Button1"]
position = Vector2(149.296, 154.93)
scale = Vector2(2.46479, 2.35211)
texture = ExtResource("2_yddrg")

[node name="Dice_e1" parent="." instance=ExtResource("3_0tr2e")]
position = Vector2(19.7183, 543.662)
scale = Vector2(0.5, 0.5)

[node name="Dice_e2" parent="." instance=ExtResource("3_0tr2e")]
position = Vector2(712.676, 540.845)
scale = Vector2(0.5, 0.5)

[node name="Dice_p1" parent="." instance=ExtResource("4_gmop2")]
position = Vector2(30.986, -529.578)
scale = Vector2(0.5, 0.5)

[node name="Dice_p2" parent="." instance=ExtResource("4_gmop2")]
position = Vector2(791.549, -549.296)
scale = Vector2(0.5, 0.5)

[connection signal="pressed" from="Node2D/Button1" to="." method="_on_button_1_pressed"]
